--- a/about.html
+++ b/about.html
@@ -17,5 +17,7 @@
             </ul>
         </nav>
     </header>
+    <main></main>
+    <script href="assets/js/about.js"></script>
 </body>
 </html>
