--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
             </ul>
         </nav>
     </header>
+    <main></main>
+    <script href="assets/js/homepage.js"></script>
 </body>
 </html>
