--- a/library.html
+++ b/library.html
@@ -17,5 +17,7 @@
             </ul>
         </nav>
     </header>
+    <main></main>
+    <script href="assets/js/library.js"></script>
 </body>
 </html>
