--- a/quiz.html
+++ b/quiz.html
@@ -17,5 +17,7 @@
             </ul>
         </nav>
     </header>
+    <main></main>
+    <script href="assets/js/quiz.js"></script>
 </body>
 </html>
