added login form to index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>QuizQuesters Trivia Challenge</title>
 </head>
 <body>
     <header>
@@ -17,7 +17,16 @@
             </ul>
         </nav>
     </header>
-    <main></main>
+    <main>
+        <form name="form" id="form">
+            <label for="username">Username</label>
+            <input type="text" name="username"id="username"><br>
+            <label for="password">Password</label>
+            <input type="text" name="password" id="password"><br><br>
+            <button type="submit" id="submit">Submit</button>
+            
+        </form>
+    </main>
     <script href="assets/js/homepage.js"></script>
 </body>
 </html>
