completed html wireframe with comments

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>QuizQuesters Trivia Challenge</title>
 </head>
 <body>
     <header>
         <i></i>
-        <h1>QuizQuestors</h1>
+        <h1>QuizQuesters</h1>
         <nav>
             <ul>
                 <li><a href="/index.html">Homepage</a></li>
