--- a/library.html
+++ b/library.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>QuizQuesters</title>
 </head>
 <body>
     <header>
         <i></i>
-        <h1>QuizQuestors</h1>
+        <h1>QuizQuesters</h1>
         <nav>
             <ul>
                 <li><a href="/index.html">Homepage</a></li>
@@ -17,7 +17,19 @@
             </ul>
         </nav>
     </header>
-    <main></main>
+    <main>
+        <div class ="stat-card">
+            <!--via js number of avatars collected-->
+            <!--via js number of quests completed-->
+        </div>
+        <div class ="collection-container">
+            <!--load all of the collected avatars-->
+        </div>
+
+    </main>
+    <footer>
+        <h6>QuizeQuesters 2024</h6>
+    </footer>
     <script href="assets/js/library.js"></script>
 </body>
 </html>
