--- a/about.html
+++ b/about.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About QuizQuesters</title>
 </head>
 <body>
     <header>
         <i></i>
-        <h1>QuizQuestors</h1>
+        <h1>QuizQuesters</h1>
         <nav>
             <ul>
                 <li><a href="/index.html">Homepage</a></li>
@@ -17,7 +17,19 @@
             </ul>
         </nav>
     </header>
-    <main></main>
+    <main>
+        <div class="text-container">
+            <p>
+                Welcome to QuizQuesters, the ultimate trivia challenge designed for enthusiasts who love testing their knowledge! Each game session presents you with 10 intriguing questions across various categories, providing a perfect blend of fun and challenge. Triumph by answering all questions correctly and earn exclusive collectible characters, known as 'Questers', which you can proudly display in your personal library. Join our community and expand your collection, as you climb the ranks in the quest for trivia mastery! 
+            </p>
+            <p>
+                All of your account history is stored in your browser data so use the same browser each time to keep track of your stats!
+            </p>
+        </div>
+    </main>
+    <footer>
+        <h6>QuizeQuesters 2024</h6>
+    </footer>
     <script href="assets/js/about.js"></script>
 </body>
 </html>
