--- a/index.html
+++ b/index.html
@@ -19,12 +19,10 @@
     </header>
     <main>
         <form name="form" id="form">
-            <label for="username">Username</label>
-            <input type="text" name="username"id="username"><br>
-            <label for="password">Password</label>
-            <input type="text" name="password" id="password"><br><br>
+            <label for="username">Please enter your name:</label>
+            <input type="text" name="username"id="username"><br><br>
             <button type="submit" id="submit">Submit</button>
-            
+
         </form>
     </main>
     <script href="assets/js/homepage.js"></script>
