Added Bulma Functionality
Added Bulma functionality and some style to the page. Also fixed minor spelling error and copied necessary Bulma header code to html files.

--- a/about.html
+++ b/about.html
@@ -4,17 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About QuizQuesters</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.0/css/bulma.min.css">
 </head>
 <body>
-    <header>
+    <header class="has-background-primary-dark">
         <i></i>
-        <h1>QuizQuesters</h1>
-        <nav>
-            <ul>
-                <li><a href="/index.html">Homepage</a></li>
-                <li><a href="/about.html">About</a></li>
-                <li><a href="/library.html">Your Library</a></li>
-            </ul>
+        <h1 class="is-size-1 has-text-centered has-text-primary">QuizQuesters</h1>
+        <nav class="navbar is-dark">
+             <div class="navbarmenu">
+                <ul class="navbar-end">
+                    <li class="navbar-item"><a href="/index.html">Homepage</a></li>
+                    <li class="navbar-item"><a href="/about.html">About</a></li>
+                    <li class="navbar-item"><a href="/library.html">Your Library</a></li>
+                </ul>
+            </div> 
         </nav>
     </header>
     <main>
