--- a/library.html
+++ b/library.html
@@ -4,17 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QuizQuesters</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.0/css/bulma.min.css">
 </head>
 <body>
-    <header>
+    
+    <header class="has-background-primary-dark">
         <i></i>
-        <h1>QuizQuesters</h1>
-        <nav>
-            <ul>
-                <li><a href="/index.html">Homepage</a></li>
-                <li><a href="/about.html">About</a></li>
-                <li><a href="/library.html">Your Library</a></li>
-            </ul>
+        <h1 class="is-size-1 has-text-centered has-text-primary">QuizQuesters</h1>
+        <nav class="navbar is-dark">
+             <div class="navbarmenu">
+                <ul class="navbar-end">
+                    <li class="navbar-item"><a href="/index.html">Homepage</a></li>
+                    <li class="navbar-item"><a href="/about.html">About</a></li>
+                    <li class="navbar-item"><a href="/library.html">Your Library</a></li>
+                </ul>
+            </div> 
         </nav>
     </header>
     <main>
@@ -28,7 +32,7 @@
 
     </main>
     <footer>
-        <h6>QuizeQuesters 2024</h6>
+        <h6>QuizQuesters 2024</h6>
     </footer>
     <script href="assets/js/library.js"></script>
 </body>
