added code for login form

--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
             </div> 
         </nav>
     </header>
-    <main></main>
-    <script href="assets/js/homepage.js"></script>
+    <main>
+        <form name="form" id="form">
+            <label for="username">Please enter your name:</label>
+            <input type="text" name="username"id="username"><br><br>
+            <button type="submit" id="submit" class="submit">Submit</button>
+            </form>
+    </main>
+    <script src="assets/js/homepage.js"></script>
 </body>
 </html>
