--- a/about.html
+++ b/about.html
@@ -33,6 +33,6 @@
     <footer>
         <h6>QuizeQuesters 2024</h6>
     </footer>
-    <script href="assets/js/about.js"></script>
+    <script src="assets/js/about.js"></script>
 </body>
 </html>
