--- a/library.html
+++ b/library.html
@@ -34,6 +34,6 @@
     <footer>
         <h6>QuizQuesters 2024</h6>
     </footer>
-    <script href="assets/js/library.js"></script>
+    <script src="assets/js/library.js"></script>
 </body>
 </html>
