--- a/quiz.html
+++ b/quiz.html
@@ -25,6 +25,6 @@
     <footer>
         <h6>QuizeQuesters 2024</h6>
     </footer>
-    <script href="assets/js/quiz.js"></script>
+    <script src="assets/js/quiz.js"></script>
 </body>
 </html>
