--- a/quiz.html
+++ b/quiz.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="assets/js/quiz.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -18,6 +19,10 @@
         </nav>
     </header>
     <main></main>
+    <button onclick="General"() >Everything Everywhere All At Once</button>
     <script href="assets/js/quiz.js"></script>
+    <button onclick="Film"() >The Academy Awards</button>
+    <script href="assets/js/quiz.js"></script>
+
 </body>
 </html>
