--- a/quiz.html
+++ b/quiz.html
@@ -11,9 +11,9 @@
         <h1>QuizQuesters</h1>
         <nav>
             <ul>
-                <li><a href="/index.html">Homepage</a></li>
-                <li><a href="/about.html">About</a></li>
-                <li><a href="/library.html">Your Library</a></li>
+                <li class="navbar-item"><a href="./index.html">Homepage</a></li>
+                <li class="navbar-item"><a href="./about.html">About</a></li>
+                <li class="navbar-item"><a href="./library.html">Your Library</a></li>
             </ul>
         </nav>
     </header>
