--- a/library.html
+++ b/library.html
@@ -10,7 +10,9 @@
     
     <header class="has-background-primary-dark">
         <i></i>
-        <h1 class="is-size-1 has-text-centered has-text-primary">QuizQuesters</h1>
+        <div class="logo">
+            <img src=".//assets/images/QuizQuestersLogo2PNG.jpg.png" alt="QuizeQuesters">
+        </div>
         <nav class="navbar is-dark">
              <div class="navbarmenu">
                 <ul class="navbar-end">
