Pinned footer to bottom and fixed spacing
Pinned footer to bottom of page on every link and fixed spacing of paragraphs. Also fixed typo in footer.

--- a/library.html
+++ b/library.html
@@ -21,7 +21,7 @@
             </div> 
         </nav>
     </header>
-    <main>
+    <main class="text-container hero is-fullheight m-3">
         <div class ="stat-card">
             <!--via js number of avatars collected-->
             <!--via js number of quests completed-->
@@ -31,9 +31,9 @@
         </div>
 
     </main>
-    <footer>
-        <h6>QuizQuesters 2024</h6>
-    </footer>
     <script src="assets/js/library.js"></script>
+    <footer class="footer has-background-grey-dark is-flex-align-items-flex-end mt-auto">
+        <h6 class=" content has-text-grey-light has-text-centered">QuizQuesters 2024</h6>
+    </footer>
 </body>
 </html>
