--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div> 
         </nav>
     </header>
-    <main>
+    <main class="text-container hero is-fullheight m-3">
         <form name="form" id="form">
             <label for="username">Please enter your name:</label>
             <input type="text" name="username"id="username"><br><br>
@@ -28,5 +28,8 @@
             </form>
     </main>
     <script src="assets/js/homepage.js"></script>
+    <footer class="footer has-background-grey-dark is-flex-align-items-flex-end mt-auto">
+        <h6 class=" content has-text-grey-light has-text-centered">QuizQuesters 2024</h6>
+    </footer>
 </body>
 </html>
