--- a/about.html
+++ b/about.html
@@ -15,9 +15,9 @@
         <nav class="navbar is-dark">
              <div class="navbarmenu">
                 <ul class="navbar-end">
-                    <li class="navbar-item"><a href="/index.html">Homepage</a></li>
-                    <li class="navbar-item"><a href="/about.html">About</a></li>
-                    <li class="navbar-item"><a href="/library.html">Your Library</a></li>
+                    <li class="navbar-item"><a href="./index.html">Homepage</a></li>
+                    <li class="navbar-item"><a href="./about.html">About</a></li>
+                    <li class="navbar-item"><a href="./library.html">Your Library</a></li>
                 </ul>
             </div> 
         </nav>
