adding functionality to generate and display avatars

--- a/library.html
+++ b/library.html
@@ -19,19 +19,30 @@
                     <li class="navbar-item"><a href="./index.html">Homepage</a></li>
                     <li class="navbar-item"><a href="./about.html">About</a></li>
                     <li class="navbar-item"><a href="./library.html">Your Library</a></li>
+                    <li class="navbar-item"><a href="./index.html">Homepage</a></li>
+                    <li class="navbar-item"><a href="./about.html">About</a></li>
+                    <li class="navbar-item"><a href="./library.html">Your Library</a></li>
                 </ul>
             </div> 
         </nav>
     </header>
-    <main class="text-container hero is-fullheight m-3">
+    <main>
+        <div>
+            <!--test button to call function-->
+            <button id="taskButton">Complete Task</button>
+            <img id="avatarImage" src="" alt="Avatar will appear here" style="width: 100px; height: 100px;">
+        </div>
+        <!--example div for the quiz results on quiz.html-->
+        <div>
+            <p id ="score">Your Score: 10/10</p>
+        </div>
         <div class ="stat-card">
             <!--via js number of avatars collected-->
             <!--via js number of quests completed-->
         </div>
-        <div class ="collection-container">
+        <div id ="collection-container">
             <!--load all of the collected avatars-->
         </div>
-
     </main>
     <script src="assets/js/library.js"></script>
     <footer class="footer has-background-grey-dark is-flex-align-items-flex-end mt-auto">
