--- a/library.html
+++ b/library.html
@@ -26,7 +26,7 @@
             </div> 
         </nav>
     </header>
-    <main>
+    <main class="text-container hero is-fullheight m-3">
         <div>
             <!--test button to call function-->
             <button id="taskButton">Complete Task</button>
