--- a/quiz.html
+++ b/quiz.html
@@ -19,7 +19,14 @@
     </header>
     <main>
         <div class="quiz-container">
-            <!--insert quiz here-->
+            <select class="dropdown-form" id="select-category" aria-label=".form-select-lg example">
+                <option selected id="selected">Select the category</option>
+            </select>
+            <form id="quizform">
+                <ol id="questions">
+                    
+                </ol>
+            </form>
         </div>
     </main>
     <footer>
