edited the background of quiz.html
background was missing at least on my latest git pull today

--- a/quiz.html
+++ b/quiz.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QuizQuesters</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.0/css/bulma.min.css">
 </head>
 <body>
-    <header>
+    <header class="has-background-primary-dark">
         <i></i> 
         <div class="logo">
             <img src=".//assets/images/QuizQuestersLogo2PNG.jpg.png" alt="QuizeQuesters">
