added scoreDiv container

--- a/quiz.html
+++ b/quiz.html
@@ -20,8 +20,8 @@
         </nav>
     </header>
 
-    <main>
-        <div class="quiz-container">
+    <main id="main">
+        <div id="quiz-container">
             <select class="dropdown-form" id="select-category" aria-label=".form-select-lg example">
                 <option selected id="selected">Select the category</option>
             </select>
