Aligned items and fixed typos
Aligned collectibles and fixed minor typos. Added button style to "submit".

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="has-background-primary-dark">
         <i></i>
         <div class="logo">
-            <img src=".//assets/images/QuizQuestersLogo2PNG.jpg.png" alt="QuizeQuesters">
+            <img src=".//assets/images/QuizQuestersLogo2PNG.jpg.png" alt="QuizQuesters">
         </div>
         <nav class="navbar is-dark">
              <div class="navbarmenu">
@@ -22,11 +22,12 @@
             </div> 
         </nav>
     </header>
-    <main class="text-container hero is-fullheight m-3">
+    <main class="text-container hero is-fullheight m-3 has-text-centered">
         <form name="form" id="form">
             <label for="username">Please enter your name:</label>
+            <br><br>
             <input type="text" name="username"id="username"><br><br>
-            <button type="submit" id="submit" class="submit">Submit</button>
+            <button class="button has-background-primary-dark" type="submit" id="submit" class="submit">Submit</button>
             </form>
     </main>
     <script src="assets/js/homepage.js"></script>
