--- a/library.html
+++ b/library.html
@@ -11,7 +11,7 @@
     <header class="has-background-primary-dark">
         <i></i>
         <div class="logo">
-            <img src=".//assets/images/QuizQuestersLogo2PNG.jpg.png" alt="QuizeQuesters">
+            <img src=".//assets/images/QuizQuestersLogo2PNG.jpg.png" alt="QuizQuesters">
         </div>
         <nav class="navbar is-dark">
              <div class="navbarmenu">
@@ -40,7 +40,7 @@
             <!--via js number of avatars collected-->
             <!--via js number of quests completed-->
         </div>
-        <div id ="collection-container">
+        <div class="column is-centered" id ="collection-container">
             <!--load all of the collected avatars-->
         </div>
     </main>
