--- a/quiz.html
+++ b/quiz.html
@@ -9,7 +9,7 @@
     <header>
         <i></i> 
         <div class="logo">
-            <img src=".//assets/images/QuizQuestersLogo2PNG.jpg.png" alt="QuizeQuesters">
+            <img src=".//assets/images/QuizQuestersLogo2PNG.jpg.png" alt="QuizQuesters">
         </div>
         <nav>
             <ul>
