--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <header class="has-background-primary-dark">
         <i></i>
         <div class="logo">
-            <img src=".//assets/images/QuizQuestersLogo2PNG.jpg.png" alt="QuizeQuesters">
+            <img src=".//assets/images/QuizQuestersLogo2PNG.jpg.png" alt="QuizQuesters">
         </div>
         <nav class="navbar is-dark">
              <div class="navbarmenu">
