Changed colours and added style to quiz.html
Changed colours and added style to quiz.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.0/css/bulma.min.css">
 </head>
 <body>
-    <header class="has-background-primary-dark">
+    <header>
         <i></i>
         <div class="logo">
             <img src=".//assets/images/QuizQuestersLogo2PNG.jpg.png" alt="QuizQuesters">
@@ -27,7 +27,7 @@
             <label for="username">Please enter your name:</label>
             <br><br>
             <input type="text" name="username"id="username"><br><br>
-            <button class="button has-background-primary-dark" type="submit" id="submit" class="submit">Submit</button>
+            <button class="button has-background-link-dark has-text-info is-dark" type="submit" id="submit" class="submit">Submit</button>
             </form>
     </main>
     <script src="assets/js/homepage.js"></script>
