--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 </head>
 <div>
 <body>
-    <header class="has-background-primary-dark">
+    <header>
         <i></i>
         <div class="logo">
             <img src=".//assets/images/QuizQuestersLogo2PNG.jpg.png" alt="QuizQuesters">
