Added back in id="main"
Added back in id="main" because merging will not allow me to pull without pushing this change. Deleted empty footer.

--- a/quiz.html
+++ b/quiz.html
@@ -21,7 +21,7 @@
         </nav>
     </header>
 
-    <main class="text-container hero is-fullheight m-3">
+    <main class="text-container hero is-fullheight m-3" id="main">
         <div class="quiz-container">
             <select class="dropdown-form has-text-info has-background-dark" id="select-category" aria-label=".form-select-lg example">
                 <option selected id="selected">Select the category</option>
@@ -33,9 +33,7 @@
             </form>
         </div>
     </main>
-    <footer>
-       
-    </footer>
+   
     <script src="assets/js/quiz.js"></script>
 
     <main></main>
