--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <img src=".//assets/images/QuizQuestersLogo2PNG.jpg.png" alt="QuizQuesters">
         </div>
         <nav class="navbar is-dark">
-             <div class="navbarmenu">
-                <ul class="navbar-end">
+             <div class="navbarmenu has-background-dark">
+                <ul class="navbar-end tabs is-boxed is-fullwidth">
                     <li class="navbar-item"><a href="./index.html">Homepage</a></li>
                     <li class="navbar-item"><a href="./about.html">About</a></li>
                     <li class="navbar-item"><a href="./library.html">Your Library</a></li>
