--- a/quiz.html
+++ b/quiz.html
@@ -8,16 +8,18 @@
 </head>
 <body>
     <header>
-        <i></i> 
+        <i></i>
         <div class="logo">
             <img src=".//assets/images/QuizQuestersLogo2PNG.jpg.png" alt="QuizQuesters">
         </div>
         <nav class="navbar is-dark">
-            <ul>
-                <li class="navbar-item"><a href="./index.html">Homepage</a></li>
-                <li class="navbar-item"><a href="./about.html">About</a></li>
-                <li class="navbar-item"><a href="./library.html">Your Library</a></li>
-            </ul>
+             <div class="navbarmenu has-background-dark">
+                <ul class="navbar-end tabs is-boxed is-fullwidth">
+                    <li class="navbar-item"><a href="./index.html">Homepage</a></li>
+                    <li class="navbar-item"><a href="./about.html">About</a></li>
+                    <li class="navbar-item"><a href="./library.html">Your Library</a></li>
+                </ul>
+            </div> 
         </nav>
     </header>
   
