--- a/quiz.html
+++ b/quiz.html
@@ -33,6 +33,7 @@
                 </ol>
             </form>
         </div>
+        <div id="imageContainer"></div>
     </main>
 
     <script src="assets/js/quiz.js"></script>
