added message that will render after quiz is submitted

--- a/quiz.html
+++ b/quiz.html
@@ -35,7 +35,9 @@
                 </ol>
             </form>
         </div>
-        <div id="imageContainer"></div>
+        <div id="imageContainer">
+            <h4 id="score-msg"></h4>
+        </div>
     </main>
    
     <script src="assets/js/quiz.js"></script>
