--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
             <br><br>
             <input type="text" name="username"id="username"><br><br>
             <button class="button has-background-link-dark has-text-info is-dark" type="submit" id="submit" class="submit">Submit</button>
-            </form>
+        </form>
+        <div id="start-quiz"></div>
     </main>
-    <script src="assets/js/homepage.js"></script>
     <footer class="footer has-background-grey-dark is-flex-align-items-flex-end mt-auto">
         <h6 class=" content has-text-grey-light has-text-centered">QuizQuesters 2024</h6>
     </footer>
+    <script src="assets/js/homepage.js"></script>
 </body>
 </html>
