--- a/quiz.html
+++ b/quiz.html
@@ -22,6 +22,11 @@
             </div> 
         </nav>
     </header>
+    <style>
+        .quiz-container {
+            margin-left: 20px;
+        }
+    </style>
   
     <main class="text-container hero is-fullheight m-3" id="main">
         <div class="quiz-container" id="quiz-container">
@@ -38,6 +43,7 @@
         <div id="imageContainer">
             <h4 id="score-msg"></h4>
         </div>
+        <div id="score"></div>
     </main>
    
     <script src="assets/js/quiz.js"></script>
