Changed start quiz button name in js and html id
Changed start quiz button name in js and html id, fixed start quiz button to top, forced score slightly higher.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <input type="text" name="username"id="username"><br><br>
             <button class="button has-background-link-dark has-text-info is-dark" type="submit" id="submit" class="submit">Submit</button>
         </form>
-        <div id="start-quiz"></div>
+        <div class="is-fixed-top" id="startquiz"></div>
     </main>
     <footer class="footer has-background-grey-dark is-flex-align-items-flex-end mt-auto">
         <h6 class=" content has-text-grey-light has-text-centered">QuizQuesters 2024</h6>
