--- a/quiz.html
+++ b/quiz.html
@@ -43,7 +43,7 @@
         <div id="imageContainer">
             <h4 id="score-msg"></h4>
         </div>
-        <div id="score"></div>
+        <div class="hero-body" id="score"></div>
     </main>
    
     <script src="assets/js/quiz.js"></script>
